--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,21 @@
 }
 .first-section{
 	background-image: url(../img/bg.jpeg);
-	height: 100%;
+	height: 100vh;
 	background-size: cover; /*cover: para q la imagen no se corra*/
 	background-repeat: no-repeat;
+}
+.first-section h1{
+    padding-top: 2em;
+    color: #fff;
+    font-weight: 900;
+    font-size: 70px;
+}
+.line{
+	border-top: 3px solid white;
+}
+#showApp{
+	color: #fff;
+	font-weight: 400;
+
 }
