texto mas imagen de celular

--- a/css/main.css
+++ b/css/main.css
@@ -20,5 +20,32 @@
 #showApp{
 	color: #fff;
 	font-weight: 400;
-
+}
+.app{
+    padding: 2em 0;
+    color: #5a5a5a;
+}
+/*estilos de title-second*/
+.second-section{
+	background-color: #fff;
+	padding: 5em 0;
+}
+.title-second{
+	color: #d2527f;
+}
+.features{
+	padding: 0.8em;
+}
+.features:hover{
+	background-color: #f2f2f2;
+	cursor: pointer;
+}
+p{
+	padding: 0;
+	margin-bottom: 1em;
+	font-weight: 300;
+	font-size: 18px;
+	line-height: 28px;
+	color: #666;
+	margin-top: 1em;
 }
