--- a/css/main.css
+++ b/css/main.css
@@ -49,3 +49,19 @@ p{
 	color: #666;
 	margin-top: 1em;
 }
+.third-section{
+	background-color: #f2f2f2;
+	height: 100vh;
+}
+.btn-default{
+	color: #fff;
+	background-color: #d2527f;
+	border-color: #b4215d;
+}
+.btn-default:hover{
+	background-color: #c53a6d;
+	color: #fff;
+}
+.btns{
+	padding-top: 5em;
+}
